# RnD_Asteroids

./: .gitignore  CMakeLists.txt  RnD_asteroid.sln  RnD_asteroid.vcxproj  RnD_asteroid.vcxproj.filters  api_Test.py  asteroids_master.json  compute_shader.glsl  json_test.py  main_check.cpp  main_functions.cpp  main_functions.h  rebound_check.py  targets.txt  targets_english.txt  test2.py  test_fs.cpp  zscore_analysis.cpp  zscore_analysis.h
Asteroid/: Asteroid.sln
analysis/: _rebound.py  comparision.py  plot.py
include/glad/: glad.h
results/real/: 2_Pallas_Real.csv  Earth_Real.csv  Mars_Real.csv
results/rebound/: 10_Hygiea_Rebound.csv  1_Ceres_Rebound.csv  2_Pallas_Rebound.csv  300_Geraldina_Rebound.csv  4_Vesta_Rebound.csv  Earth_Rebound.csv  Jupiter_Rebound.csv  Mars_Rebound.csv  Mercury_Rebound.csv  Venus_Rebound.csv
sbdb_data/: 106_Dione.json  10_Hygiea.json  11_Parthenope.json  121_Hermione.json  12_Victoria.json  130_Elektra.json  134340_Pluto.json  136108_Haumea.json  136199_Eris.json  136472_Makemake.json  13_Egeria.json  145_Adeona.json  14_Irene.json  153591_2001_SN263.json  1566_Icarus.json  15_Eunomia.json  162_Laurentia.json  16_Psyche.json  17_Thetis.json  1862_Apollo.json  18_Melpomene.json  19_Fortuna.json  1_Ceres.json  2001_FO32.json  2020_CD3.json  2021_PH27.json  2022_EB5.json  2023_DW.json  2023_HX.json  20_Massalia.json  2101_Adonis.json  21_Lutetia.json  22_Kalliope.json  23_Thalia.json  243_Ida.json  24_Themis.json  25143_Itokawa.json  253_Mathilde.json  2_Pallas.json  3122_Florence.json  (+17 more)
shaders/: compute_shader.glsl  compute_shaders.glsl
src/: api_Test.py  geraldina_ephemeris.csv  glad.c  main.cpp  real.py  real_visual.py  rebound_check.py  rebound_check_300.py  rebound_visual.py  shader.cpp  shader.h  shader_screen.frag  targets_fix.py
zscore/: _manual.py  _rebound.py
